# Fenix2TFDINavDataConverter

./: .gitignore  Cargo.toml  Fenix2TFDINavDataConverter.py  README.md  build.rs  compare_result.txt
src/: airways.rs  config.rs  db_json.rs  main.rs  stats.rs  tables.rs  terminal_filters.rs  terminal_legs.rs  waypoints.rs
src/airways/: merge.rs  rte_seg.rs
