[package]
name = "fenix2tfdi_nav_data_converter"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winresource = "0.1"

[dependencies]
anyhow = "1.0"
rayon = "1.10"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sevenz-rust = "0.6"
