[package]
name = "fenix2tfdi_nav_data_converter"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winresource = "0.1.31"

[dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
rayon = "1.10"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
